Day3/declarative-manifest-scripts/pod.yml
apiVersion: v1
kind: Pod
metadata:
  name: my-pod
  labels:
    app: my-pod
spec:
  containers:
  - image: bitnami/nginx:latest
    name: my-container
